# opengl-testing

./: .gitignore  README.md
01/: CMakeLists.txt  LoadShaders.cpp  LoadShaders.h  chapter2.1.cxx  makefile  readfile.h  setup.sh  triangles.cpp  triangles.cxx  triangles.h  vertices.cpp  vertices.cxx  vertices.h
01/shaders/: triangles.frag  triangles.vert
Spheretest/: CMakeLists.txt  OpenGL.cpp  OpenGL.h  main.cpp
Spheretest/shaders/: triangles.frag  triangles.geom  triangles.vert
Surf/: CMakeLists.txt  LoadShaders.cpp  loadshaders.cpp  readfile-test.cxx  readfile.cpp  readfile.h  triangles.cxx  triangles.h  vertices.cpp  vertices.h
Surf/shaders/: triangles.frag  triangles.vert
lib/: LoadShaders.cpp
